# Daily_Close_Notifier

./: .gitignore  README.md  asset_data.py  config.py  crypto_data.py  email_notifier.py  main.py  models.py  pyproject.toml  requirements.txt  stock_data.py  utils.py  validators.py
Folder/: asset_data.py  email_notifier.py  main.py
static/: styles.css
templates/: index.html
