[tool.poetry]
name = "daily close notifications"
version = "0.1.0"
description = "Sends notifications about the broader digital asset market, centering around crypto, at daily close (00:00UTC). Also includes an API to interact with close data stored in the database."
authors = ["Kevin <tokevinm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
pydantic = {extras = ["email"], version = "^2.9.2"}
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
httpx = "^0.27.2"
uvicorn = "^0.32.0"
jinja2 = "^3.1.4"
aiosmtplib = "^3.0.2"
python-multipart = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
